Fixed menu display on mobile devices

--- a/src/components/TaskTabs.module.css
+++ b/src/components/TaskTabs.module.css
@@ -1,4 +1,3 @@
-
 .menu {
   list-style: none;
   margin: 0;
@@ -6,6 +5,7 @@
   display: flex;
   justify-content: space-between;
   align-items: baseline;
+  flex-wrap: wrap;
   margin-top: 1rem;
   margin-bottom: 1rem;
   width: 97%;
